--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-frontend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "description": "Portfolio website for Daniil Doneckov (DevOps Engineer)",
   "main": "src/index.js",
@@ -11,11 +11,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1"
   },
+  "proxy": "http://localhost:8000/",
   "devDependencies": {
     "eslint": "^8.50.0",
     "eslint-config-react-app": "^7.0.1",
